3-devtools/gitea/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea
  namespace: devtools
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /gitea
            pathType: Prefix
            backend:
              service:
                name: gitea
                port:
                  number: 3000
